modified:   package.json 	modified:   src/containers/App.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "villagefamily",
-  "homepage": "https://Ronald-Lee-Haynes-Jr.github.io/villagefamily",
+  "name": "RobotMatch",
+  "homepage": "https://Ronald-Lee-Haynes-Jr.github.io/RobotMatch",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
