modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RobotMatch",
+  "name": "robotmatch",
   "homepage": "https://Ronald-Lee-Haynes-Jr.github.io/RobotMatch",
   "version": "0.1.0",
   "private": true,
