modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robotmatch",
-  "homepage": "https://Ronald-Lee-Haynes-Jr.github.io/RobotMatch",
+  "homepage": "https://Ronald-Lee-Haynes-Jr.github.io/Robot-Match",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
